# groupme-bot

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: test-lint.yml
examples/multi-bot-handler/: main.py
examples/multi-bot-router/: main.py
groupme_bot/: __init__.py  application.py  attachment.py  bot.py  callback.py  context.py  groupme.py  router.py  test_router.py
groupme_bot/tests/: test_application.py  test_attachment.py  test_callback.py
